# amadeus

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
android/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/gradle/: libs.versions.toml
assets/boot/: manifest.json
assets/model/: amadeus expressions.model3.json  amadeusV1.model3.json
crates/amadeus-android/: Cargo.toml  build.rs
crates/amadeus-android/src/: lib.rs
crates/amadeus-android/src/core/: mod.rs  native_android.rs
crates/amadeus-android/src/cubism/: CubismModelAndroid.cpp  CubismModelAndroid.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager_Android.cpp  LAppTextureManager_Android.hpp  aaudio_player.c  cubism_bridge_android.cpp
crates/amadeus-backend/: Cargo.toml  build.rs
crates/amadeus-backend/src/: backend.rs  boundary.rs  cli.rs  config.rs  lib.rs  prompt.rs  providers.rs  serve.rs  settings_command.rs  ui.rs  workspace.rs
crates/amadeus-backend/src/app/: mod.rs  repl.rs  turn.rs
crates/amadeus-backend/src/autonomy/: agenda.rs  chemistry.rs  focus.rs  mod.rs  research.rs
crates/amadeus-backend/src/context/: budget.rs  mod.rs  summary.rs
crates/amadeus-backend/src/llm/: anthropic.rs  common.rs  gemini.rs  llama_cpp.rs  mod.rs  ollama.rs  openai_chat.rs  openai_responses.rs
crates/amadeus-backend/src/mcp/: mod.rs
crates/amadeus-backend/src/session/: model.rs  store.rs
crates/amadeus-backend/src/skills/: loader.rs  mod.rs
crates/amadeus-backend/src/task/: mod.rs
crates/amadeus-backend/src/tools/: agent.rs  catalog.rs  command.rs  filesystem.rs  mod.rs  planning.rs  skill.rs  task.rs  user.rs
crates/amadeus-client/: Cargo.toml  build.rs
crates/amadeus-client/src/: lib.rs
crates/amadeus-client/src/core/: error.rs
crates/amadeus-client/src/cubism/: CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppPal.cpp  LAppPal.hpp  font_renderer.cpp  font_renderer.hpp  overlay_draw.cpp
crates/amadeus-client/src/live2d/: config.rs
crates/amadeus-client/src/tts/: detection.rs  japanese.rs  mod.rs  routing.rs  service.rs
crates/amadeus-desktop/: Cargo.toml
crates/amadeus-desktop/src/: main.rs
crates/amadeus-desktop/src/core/: error.rs  runtime.rs
crates/amadeus-desktop/src/core/native/: mod.rs
crates/amadeus-desktop/src/core/native/cpp/: boot_sequence.hpp  overlay.cpp
docs/: index.html
src/: main.rs
src/agent/: backend.rs  boundary.rs  cli.rs  config.rs  mod.rs  planning.rs  prompt.rs  providers.rs  serve.rs  settings_command.rs  ui.rs  workspace.rs
src/agent/app/: mod.rs  repl.rs  turn.rs
src/agent/autonomy/: agenda.rs  chemistry.rs  focus.rs  mod.rs  research.rs
src/agent/context/: budget.rs  mod.rs  summary.rs
src/agent/llm/: anthropic.rs  common.rs  gemini.rs  llama_cpp.rs  mod.rs  ollama.rs  openai_chat.rs  openai_responses.rs
src/agent/llm/cpp/: llama_bridge.cpp  llama_bridge.h
src/agent/memory/: mod.rs
src/agent/session/: mod.rs  model.rs  store.rs
src/agent/skills/: loader.rs  mod.rs
src/agent/task/: mod.rs  model.rs
src/agent/tools/: agent.rs  catalog.rs  command.rs  filesystem.rs  planning.rs  skill.rs  task.rs  user.rs  web.rs
src/core/: error.rs  log_window.rs  mod.rs
src/core/llama/: bridge.cpp  bridge.h
src/core/native/: mod.rs
src/core/native/cpp/: CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  MouseActionManager_Common.cpp  amadeus_overlay.cpp  amadeus_overlay.hpp  amadeus_text_renderer.cpp  amadeus_text_renderer.hpp  boot_sequence.cpp  boot_sequence.hpp  cubism_bridge.cpp  font_renderer.cpp  overlay.cpp  overlay.hpp  overlay_draw.cpp
src/mcp/: client.rs  mod.rs  types.rs
src/stt/: config.rs  mod.rs  service.rs
src/tts/: config.rs  filter.rs  japanese.rs  mod.rs  service.rs
