[package]
name = "amadeus-backend"
version = "0.1.0"
edition = "2024"

[features]
default = ["local-llm", "llm-cuda"]
local-llm = []
llm-vulkan = ["local-llm"]
llm-cuda   = ["local-llm"]

[dependencies]
anyhow      = "1.0"
globset     = "0.4.16"
html2text   = "0.12"
libc        = "0.2"
pulldown-cmark = "0.13"
regex       = "1.12.2"
reqwest     = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.145"
thiserror   = "1.0.69"
tiny_http   = "0.12"
uuid        = { version = "1", features = ["v4"] }
walkdir     = "2.5.0"

[build-dependencies]
cc    = "1.1"
cmake = "0.1"
