[package]
name = "amadeus-desktop"
version = "0.1.0"
edition = "2024"

[features]
default    = ["cuda", "stt-cuda", "local-llm", "llm-cuda"]
cuda       = ["amadeus-client/cuda"]
flash-attn = ["amadeus-client/flash-attn"]
metal      = ["amadeus-client/metal"]
mkl        = ["amadeus-client/mkl"]
accelerate = ["amadeus-client/accelerate"]
stt-vulkan = ["amadeus-client/stt-vulkan"]
stt-cuda   = ["amadeus-client/stt-cuda"]
local-llm  = ["amadeus-backend/local-llm"]
llm-vulkan = ["amadeus-backend/llm-vulkan"]
llm-cuda   = ["amadeus-backend/llm-cuda"]

[[bin]]
name = "amadeus-desktop"
path = "src/main.rs"

[dependencies]
amadeus-backend = { path = "../amadeus-backend" }
amadeus-client  = { path = "../amadeus-client" }
anyhow    = "1.0"
hound     = "3.5"
reqwest   = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rodio     = "0.20.1"
serde     = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao       = "0.35.0"
thiserror = "1.0"
wry       = "0.55.0"

[build-dependencies]
# No native compilation here — amadeus-client handles Cubism C++,
# amadeus-backend handles llama.cpp.
